tests/machine/x/cpp/string_contains.error
line 12: ../../../tests/machine/x/cpp/string_contains.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/string_contains.cpp:12:38: error: ‘class std::__cxx11::basic_string<char>’ has no member named ‘contains’
   12 |     std::cout << std::boolalpha << s.contains(std::string("cat"));
      |                                      ^~~~~~~~
../../../tests/machine/x/cpp/string_contains.cpp:16:38: error: ‘class std::__cxx11::basic_string<char>’ has no member named ‘contains’
   16 |     std::cout << std::boolalpha << s.contains(std::string("dog"));
      |                                      ^~~~~~~~

 11 |   {
 12 |     std::cout << std::boolalpha << s.contains(std::string("cat"));
 13 |     std::cout << std::endl;
